force-app/main/default/objects/JobCommission__c/JobCommission__c.object-meta.xml
<CustomObject>
    <label>Job + Commission</label>
    <nameField>
        <displayFormat>JC-{00000}</displayFormat>
        <label>Job Commission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job + Commission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>