force-app/main/default/objects/JobCommission__c/fields/ProfitInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxUSD__c</fullName>
    <label>Profit Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>