force-app/main/default/objects/JobCommission__c/fields/ProfitInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxVND__c</fullName>
    <label>Profit Incl Tax (VND)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>