force-app/main/default/objects/JobCommission__c/fields/TotalUnreceivedBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedBalanceUSD__c</fullName>
    <label>Total Unreceived Balance (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>