force-app/main/default/objects/JobCommission__c/fields/TotalUnreceivedBalanceVND__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedBalanceVND__c</fullName>
    <label>Total Unreceived Balance (VND)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>